# NodeBoxEditor

./: .gitignore  .travis.yml  CMakeLists.txt  CodeDialog.cpp  CodeDialog.h  CommonFunctions.cpp  Configuration.h  Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  FileParser.h  LUAFileParser.cpp  Makefile  MenuState.cpp  MenuState.h  NBEFileParser.cpp  NBEditor.cpp  NBEditor.h  NBPropertiesDialog.cpp  NBPropertiesDialog.h  Node.cpp  Node.h  NodeBox.cpp  NodeBox.h  Project.cpp  Project.h  README.md  cEditor.cpp  cEditor.h  cNodes.cpp  cNodes.h  common.h  define.h  editor.conf.example  exit.nbe  fileformat.txt  ideas.txt  index.html  main.cpp  (+5 more)
docs/: developers.md  fileformat.md  fileformat.txt  make_install.md  projectfileformat.txt
examples/: .directory
misc/: install_irrlicht.sh  install_nbe.sh
src/: Configuration.cpp  Configuration.h  Configuration.hpp  Dialog.hpp  Editor.cpp  Editor.h  Editor.hpp  EditorState.cpp  EditorState.h  EditorState.hpp  FileDialog.cpp  FileDialog.hpp  FileParser.h  GUIHelpers.cpp  GUIHelpers.hpp  ImageDialog.cpp  ImageDialog.hpp  LUAFileParser.cpp  MediaManager.cpp  MediaManager.hpp  MenuState.cpp  MenuState.h  MenuState.hpp  NBEFileParser.cpp  NBEditor.cpp  NBEditor.h  NBEditor.hpp  Node.cpp  Node.h  Node.hpp  NodeBox.cpp  NodeBox.h  NodeBox.hpp  NodeEditor.cpp  NodeEditor.h  NodeEditor.hpp  Project.cpp  Project.h  Project.hpp  TextureDialog.cpp  (+11 more)
src/FileFormat/: CPP.cpp  CPP.hpp  FileFormat.cpp  FileFormat.hpp  Lua.cpp  Lua.hpp  MTC.cpp  MTC.hpp  NBE.cpp  NBE.hpp  helpers.cpp  helpers.hpp  obj.cpp  obj.hpp
src/dialogs/: Dialog.hpp  FileBrowser.cpp  FileBrowser.hpp  FileDialog.cpp  FileDialog.hpp  ImageDialog.cpp  ImageDialog.hpp  TextureDialog.cpp  TextureDialog.hpp
src/modes/: NBEditor.cpp  NBEditor.hpp  NodeEditor.cpp  NodeEditor.hpp  TextureEditor.cpp  TextureEditor.hpp
src/project/: media.cpp  media.hpp  node.cpp  node.hpp  nodebox.cpp  nodebox.hpp  project.cpp  project.hpp
src/util/: SimpleFileCombiner.cpp  SimpleFileCombiner.hpp  filesys.cpp  filesys.hpp  string.cpp  string.hpp  tinyfiledialogs.c  tinyfiledialogs.h
util/buildbot/: buildwin32.sh  buildwin64.sh  toolchain_mingw.cmake
util/travis/: before_install.sh  script.sh
